--- a/Html5/CSS3/AttributeSelectors.html
+++ b/Html5/CSS3/AttributeSelectors.html
@@ -18,7 +18,7 @@
         p[title="#4 paragraph"] selects all paragraphs with a title attribute containing the exact text, #4 paragraph. Matches are case-sensetive and must match letter-for-letter including whitespace.
     </p>
     <p>
-        <a href="http://www.example.com" target="_blank">example 1</a>
+        <a href="https://www.example.net" target="_blank">example 1</a>
         <a href="http://www.example.com">example 2</a>
     </p>
     <p>
