--- a/Html5/CSS3/PseudoSelectors.html
+++ b/Html5/CSS3/PseudoSelectors.html
@@ -3,12 +3,46 @@
 <head>
     <meta charset="utf-8" />
     <title>Pseudo Selectors</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="PseudoSelectors.css" />
 </head>
 <body style="margin-bottom:200px;">
     <h1>Pseudo Selectors</h1>
     <p>
-        lorem ipsum
+        Lorem Ipsum, dizgi ve baskı endüstrisinde
+        kullanılan mıgır metinlerdir. Lorem Ipsum,
+        adı bilinmeyen bir matbaacının bir hurufat
+        numune kitabı oluşturmak üzere bir yazı
+        galerisini alarak karıştırdığı 1500'lerden
+        beri endüstri standardı sahte metinler
+        olarak kullanılmıştır.
     </p>
+    <p class="about">
+        Lorem Ipsum, dizgi ve baskı endüstrisinde
+        kullanılan mıgır metinlerdir. Lorem Ipsum,
+        adı bilinmeyen bir matbaacının bir hurufat
+        numune kitabı oluşturmak üzere bir yazı
+        galerisini alarak karıştırdığı 1500'lerden
+        beri endüstri standardı sahte metinler
+        olarak kullanılmıştır.
+    </p>
+    <ul>
+        <li>first</li>
+        <li>second</li>
+        <li>third</li>
+        <li>fourth</li>
+        <li>fifth</li>
+    </ul>
+    <a href="#">
+        a:link
+    </a>
+    <a href="#">
+        a:visited
+    </a>
+    <a href="#">
+        a:hover
+    </a>
+    <a href="#">
+        a:activate
+    </a>
 </body>
 </html>
