--- a/Html5/CSS3/PseudoSelectors.html
+++ b/Html5/CSS3/PseudoSelectors.html
@@ -44,5 +44,24 @@
     <a href="#">
         a:activate
     </a>
+    <br />
+    <div>
+        Lorem Ipsum, dizgi ve baskı endüstrisinde
+        kullanılan mıgır metinlerdir. Lorem Ipsum,
+        adı bilinmeyen bir matbaacının bir hurufat
+        numune kitabı oluşturmak üzere bir yazı
+        galerisini alarak karıştırdığı 1500'lerden
+        beri endüstri standardı sahte metinler
+        olarak kullanılmıştır.
+        <span>
+            Lorem Ipsum, dizgi ve baskı endüstrisinde
+            kullanılan mıgır metinlerdir. Lorem Ipsum,
+            adı bilinmeyen bir matbaacının bir hurufat
+            numune kitabı oluşturmak üzere bir yazı
+            galerisini alarak karıştırdığı 1500'lerden
+            beri endüstri standardı sahte metinler
+            olarak kullanılmıştır.
+        </span>
+    </div>
 </body>
 </html>
